# recommender-system

./: .env  Cargo.toml
generic-controller/: Cargo.toml
generic-controller/src/: lib.rs
generic_controller/: Cargo.toml
generic_controller/src/: lib.rs
migrations/2020-05-23-184419_create_posts/: up.sql
specific-controllers/book_controller/: .env  Cargo.toml
specific-controllers/book_controller/migrations/2020-05-24-195239_user_table/: up.sql
specific-controllers/book_controller/migrations/2020-05-24-195340_scores_table/: up.sql
specific-controllers/book_controller/src/: schema.rs
specific_controllers/book_controller/: .env  Cargo.toml
specific_controllers/book_controller/migrations/2020-05-25-160559_create_users/: up.sql
specific_controllers/book_controller/migrations/2020-05-25-160605_create_books/: up.sql
specific_controllers/book_controller/migrations/2020-05-25-160610_create_scores/: up.sql
specific_controllers/book_controller/src/: b_controller.rs  lib.rs  models.rs  schema.rs
specific_controllers/movie_controller/: .env  Cargo.toml
specific_controllers/movie_controller/src/: lib.rs  m_controller.rs  models.rs  schema.rs
specific_controllers/small_movielens_controller/: .env  Cargo.toml
specific_controllers/small_movielens_controller/migrations/2020-05-26-151738_create_scores/: down.sql  up.sql
specific_controllers/small_movielens_controller/src/: lib.rs  models.rs  schema.rs  sml_controller.rs
src/: book_api.rs  distances.rs  distances_item.rs  distances_user.rs  main.rs  movie_api.rs  schema.rs  small_movielens_api.rs
(+3 files in other folders)
