[package]
name = "recommendation-system"
version = "0.1.0"
authors = ["Maria <mb.lev17@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["generic_controller", "specific_controllers/*"]

[dependencies]
generic_controller = {version="*", path="./generic_controller"}
movie_controller = {version="*", path="./specific_controllers/movie_controller"}
book_controller = {version="*", path="./specific_controllers/book_controller"}
small_movielens_controller = {version="*", path="./specific_controllers/small_movielens_controller"}